plugins {
    alias(libs.plugins.java)
    alias(libs.plugins.quarkus)
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation 'io.quarkus:quarkus-redis-client'
    // Use project BOM to align gRPC/Protobuf with rest of the project (4.x/1.75.x)
    implementation platform('io.pipeline:pipeline-bom:1.0.0-SNAPSHOT')
    implementation enforcedPlatform(libs.quarkus.amazon.services.bom)
    implementation 'io.quarkus:quarkus-hibernate-orm-panache'
    implementation 'io.quarkus:quarkus-rest'
    implementation 'io.quarkiverse.amazonservices:quarkus-amazon-s3'
    implementation 'io.quarkiverse.amazonservices:quarkus-amazon-kms'


    implementation 'io.quarkus:quarkus-smallrye-health'
    implementation 'io.quarkus:quarkus-jdbc-mysql'
    implementation 'io.quarkus:quarkus-arc'
    implementation 'io.quarkus:quarkus-flyway'
    implementation 'org.flywaydb:flyway-mysql'
    implementation 'io.quarkus:quarkus-smallrye-openapi'
    implementation 'io.quarkus:quarkus-messaging-kafka'
    implementation 'io.quarkiverse.amazonservices:quarkus-amazon-kms'
    // https://mvnrepository.com/artifact/software.amazon.awssdk/url-connection-client
    implementation libs.aws.sdk.url.connection
    implementation libs.aws.sdk.netty.nio

    implementation 'io.quarkus:quarkus-grpc'
    implementation 'io.quarkus:quarkus-smallrye-stork'
    
    // Service Discovery dependencies for Consul
    implementation 'io.smallrye.stork:stork-service-discovery-consul'
    implementation 'io.smallrye.reactive:smallrye-mutiny-vertx-consul-client'
    implementation 'io.smallrye.stork:stork-service-registration-consul'
    implementation 'io.pipeline:dynamic-grpc-registration-clients'
    implementation 'io.pipeline:dynamic-grpc'
    
    integrationTestImplementation 'io.grpc:grpc-netty-shaded'
    integrationTestImplementation 'io.grpc:grpc-protobuf'
    integrationTestImplementation 'io.grpc:grpc-stub'
    testImplementation 'io.quarkus:quarkus-junit5'

    // Project dependencies (Avoid importing project BOM here to prevent gRPC/Protobuf version conflicts with Quarkus platform)
    implementation 'io.pipeline:grpc-stubs:1.0.0-SNAPSHOT'
    implementation 'io.pipeline:streaming-upload:1.0.0-SNAPSHOT'
    testImplementation 'io.pipeline:grpc-wiremock:1.0.0-SNAPSHOT'
    // Apicurio Registry v3 protobuf serde
    implementation libs.apicurio.registry.protobuf.serde
    // OpenSearch Java Client
    implementation libs.opensearch.java
    implementation libs.commons.compress
    // https://mvnrepository.com/artifact/org.awaitility/awaitility
    testImplementation 'org.awaitility:awaitility:4.3.0'

}

group = 'io.pipeline'
version = '1.0.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

test {
    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
    // Force test profile and test schema management
    environment "QUARKUS_PROFILE", "test"
    systemProperty "quarkus.test.profile.tags", "test"
    maxHeapSize = "10g"
    jvmArgs = ["-Xmx10g", "-XX:MaxMetaspaceSize=1g", "--add-opens", "java.base/java.lang=ALL-UNNAMED"]
    // Ensure test resources are used
    useJUnitPlatform()
}
compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

compileTestJava {
    options.encoding = 'UTF-8'
}

quarkusDev {
    jvmArgs = ["-Xmx10g", "-XX:MaxMetaspaceSize=1g", "--add-opens", "java.base/java.lang=ALL-UNNAMED"]
}
